--- a/allukas_react/src/styles/App.css
+++ b/allukas_react/src/styles/App.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+section {
+  @apply py-24;
+}
+
+.swiper-button-next {
+  @apply size-8 rounded-full bg-white p-6 text-black transition-colors duration-300 ease-in-out hover:bg-black hover:text-white;
+
+  &:after {
+    @apply text-base;
+  }
+}
+
+.swiper-button-prev {
+  @apply size-8 rounded-full bg-white p-6 text-black transition-colors duration-300 ease-in-out hover:bg-black hover:text-white;
+
+  &:after {
+    @apply text-base;
+  }
+}
