--- a/allukas_react/src/styles/App.css
+++ b/allukas_react/src/styles/App.css
@@ -21,3 +21,15 @@ section {
     @apply text-base;
   }
 }
+
+.btn {
+  @apply px-8 py-2 transition-colors duration-300 ease-in-out;
+}
+
+.btn-outline {
+  @apply border border-black hover:bg-black hover:text-white;
+}
+
+.btn-black {
+  @apply bg-black text-white hover:bg-transparent hover:text-black;
+}
