--- a/allukas_react/src/styles/App.css
+++ b/allukas_react/src/styles/App.css
@@ -33,3 +33,7 @@ section {
 .btn-black {
   @apply bg-black text-white hover:bg-transparent hover:text-black;
 }
+
+.ftr-link {
+  @apply transition-transform duration-300 ease-in-out hover:translate-x-2;
+}
