--- a/allukas_react/src/styles/App.css
+++ b/allukas_react/src/styles/App.css
@@ -41,3 +41,19 @@ h2 {
 .ftr-link {
   @apply transition-transform duration-300 ease-in-out hover:translate-x-2;
 }
+
+.navlink {
+  @apply px-4 py-6 font-normal;
+
+  &.active {
+    @apply font-medium;
+  }
+}
+
+header {
+  @apply z-50 bg-white transition-all duration-300 ease-in-out;
+
+  &.sticky {
+    @apply fixed left-0 top-0 w-full pt-4 shadow-lg;
+  }
+}
