--- a/allukas_react/src/styles/index.css
+++ b/allukas_react/src/styles/index.css
@@ -1,1 +1,20 @@
+body {
+  &::-webkit-scrollbar {
+    width: 0.8rem;
+  }
 
+  &::-webkit-scrollbar-track {
+    background: gainsboro;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: black;
+  }
+}
+
+@supports (scrollbar-color: black gainsboro) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: black gainsboro;
+  }
+}
