--- a/allukas_react/src/styles/App.css
+++ b/allukas_react/src/styles/App.css
@@ -10,6 +10,10 @@ h2 {
   @apply text-4xl font-medium leading-tight;
 }
 
+h3 {
+  @apply text-2xl font-medium leading-tight;
+}
+
 .swiper-button-next {
   @apply size-8 rounded-full bg-white p-6 text-black transition-colors duration-300 ease-in-out hover:bg-black hover:text-white;
 
@@ -38,12 +42,16 @@ h2 {
   @apply border border-black bg-black text-white hover:bg-transparent hover:text-black;
 }
 
+.btn-gray {
+  @apply border border-gray-400 bg-gray-400 text-white hover:bg-transparent hover:text-black;
+}
+
 .ftr-link {
   @apply transition-transform duration-300 ease-in-out hover:translate-x-2;
 }
 
 .navlink {
-  @apply px-4 py-6 font-normal;
+  @apply p-4 font-normal;
 
   &.active {
     @apply font-medium;
@@ -51,7 +59,7 @@ h2 {
 }
 
 header {
-  @apply relative z-50 bg-white transition-all duration-500 ease-in-out;
+  @apply relative z-30 bg-white transition-all duration-500 ease-in-out;
 
   &.sticky {
     @apply fixed left-0 top-0 w-full pt-4 shadow-lg;
@@ -60,13 +68,20 @@ header {
 
 .form-control {
   @apply my-4 block w-full;
-}
 
-input,
-textarea {
-  @apply w-full border border-gray-300 bg-white px-4 py-4;
+  input,
+  textarea {
+    @apply w-full border border-gray-300 bg-white px-4 py-4;
+  }
 }
-
 .form-error {
   @apply mt-2 pl-2 text-sm italic text-red-500;
+}
+
+.prodinfo-link {
+  @apply border-b-2 border-transparent py-4 text-xl transition duration-300 ease-in-out;
+
+  &.active {
+    @apply border-b-black;
+  }
 }
